--- a/static/scss/store/about.css
+++ b/static/scss/store/about.css
@@ -1,8 +1,14 @@
 .cover {
-  margin-top: -160px;
+  height: 40vh;
+}
+
+.cover .cover-text {
+  -webkit-transform: translateY(-70px) translateX(0);
+          transform: translateY(-70px) translateX(0);
 }
 
 .cover .cover-text img {
-  width: 85%;
+  top: 50px;
+  left: -35px;
 }
 /*# sourceMappingURL=about.css.map */
