--- a/apps/core/templates/core/footer.html
+++ b/apps/core/templates/core/footer.html
@@ -32,9 +32,8 @@
         </ul>
     </div>
     <div class="social-icons">
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-facebook"></i>
-        <i class="fab fa-tiktok"></i>
+        <i onclick="window.location.href='https://www.instagram.com/webiser.no/'" class="fab fa-instagram"></i>
+        <i onclick="window.location.href='https://www.instagram.com/webiser.no/'" class="fab fa-tiktok"></i>
     </div>
     <div class="copyright">
         <p>Copyright &#169; 2020-2021 Webiser</p>
