--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -7,6 +7,10 @@
 <script rel="stylesheet" src="{% static '/js/home.js' %}" type="text/javascript"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
+
 
 <div class="cover">
    <div class="cover-text">
@@ -20,7 +24,7 @@
    </div>
 </div>
 <div class="services" id="services">
-   <h1>Hvorfor velge Webiser?</h1>
+   <h1 class="heading">Hvorfor velge Webiser?</h1>
    <div class="icon" id="icon1">
       <i class="fas fa-users"></i>      
       <h1 id="servicesFirstText">Designere og utviklere</h1>
@@ -42,7 +46,7 @@
    <div class="icon" id="icon4">
       <i class="fas fa-shield-check"></i>      
       <h1 id="servicesFirstText">Sikkerthet med vår hosting</h1>
-      <p id="servicesSecondText4"></p>
+      <p id="servicesSecondText4">Ikke frykt at nettsiden er nede ofte. Med vår hosting tjeneste så har du garantert 99% uptime, og 24/7 kundeservice. Vi hoster nettsiden i maks 6 måneder, og den koster 80kr/m</p>
       <button id="readMoreServices4" onclick="servicesReadMore4()">Les mer</button>
    </div>
    <div class="border"></div>
@@ -50,15 +54,12 @@
 
 <div id="productScrollTo" style="height: 60px; width: 100%; background: white;"></div>
 <div class="product-section" id="productHomePage">
-   <h1>Hva passer deg?</h1>
+   <h1 class="heading">Hva passer deg?</h1>
    {% for product in products %}
-   <div class="product-card">
+   <div class="product-card" onclick="window.location.href='{% url  'product_detail' product.slug  %}'">
       <div class="text">
          <h1 class="product-name">{{product.name}}</h1>
          <h1 class="product-price">{{product.price|floatformat}} kr</h1>
-      </div>
-      <div class="button-product-section">
-         <a href="{% url  'product_detail' product.slug  %}" class="btn-details">Se detaljer</a>
       </div>
    </div>
    {% endfor %}
@@ -76,7 +77,7 @@
 
 <div id="proccessScrollTo" style="height: 60px; width: 100%; background: white;"></div>
 <div class="proccess" id="info">
-   <h1>Så enkelt er det</h1>
+   <h1 class="heading">Så enkelt er det</h1>
    <div class="content">
       <div class="class-1">
          <h1>Vi motar bestillingen din</h1>
@@ -113,17 +114,14 @@
    <p>Kontakter oss under</p>
    <form method="post">
       {% csrf_token %}
-      <label for="fra_epost">Epost</label>
       <br>
-      <input type="text" id="fra_epost" name="fra_epost">
+      <input type="email" id="fra_epost" name="fra_epost" placeholder="Epost">
       <br>
-      <label for="navn">Navn</label>
       <br>
-      <input type="text" id="navn" name="navn">
+      <input type="text" id="navn" name="navn" placeholder="Fornavn">
       <br>
-      <label for="beskjed">Hva ønsker du fortelle oss?</label>
       <br>
-      <textarea class="beskjed" type="text" id="beskjed" name="beskjed" cols="30" rows="10"></textarea>
+      <textarea class="beskjed" type="text" id="beskjed" name="beskjed" cols="30" rows="10" placeholder="Hva ønsker du fortelle oss?"></textarea>
       <div class="form-actions">
          <button type="submit" name="contact" value="contact">Send</button>
       </div>
