--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -41,21 +41,17 @@
         <br>
         <input type="color" id="color" name="color" required oninvalid="this.setCustomValidity('Værsåsnill, velg en farge')" oninput="this.setCustomValidity('')">
         <br>
-        <label for="first_name">Fornavn</label>
         <br>
-        <input type="text" id="first_name" name="first_name" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+        <input type="text" id="first_name" name="first_name" placeholder="Fornavn" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
         <br>
-        <label for="last_name">Etternavn</label>
         <br>
-        <input type="text" id="last_name" name="last_name" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+        <input type="text" id="last_name" name="last_name" placeholder="Etternavn" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
         <br>
-        <label for="email">Epost</label>
         <br>
-        <input type="email" id="email" name="email" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+        <input type="email" id="email" name="email" placeholder="Epost" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
         <br>
-        <label for="message">Fortell oss om bedriften din</label>
         <br>
-        <textarea id="message" name="message"></textarea>
+        <textarea id="message" name="message" placeholder="Fortell oss om bedriften din"></textarea>
         <br>
         <div class="form-actions">
             <button onclick="orderLoading()" name="order" value="order" type='submit'>Send</button>
