--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -8,8 +8,8 @@
 
 .cover {
   position: relative;
-  width: auto;
-  min-height: 80vh;
+  width: 100%;
+  height: 65vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,26 +22,26 @@
   background: #7890dc;
 }
 
-.cover img {
-  position: absolute;
-  left: 0;
-  top: 130px;
-  width: 85%;
-  height: auto;
+.cover .cover-text {
+  width: 100%;
+  -webkit-transform: translateY(-70px) translateX(0);
+          transform: translateY(-70px) translateX(0);
+  position: relative;
+  text-align: left;
+  margin: 5px;
+  margin-top: 0;
 }
 
-.cover .cover-text {
-  -webkit-transform: translateY(-20px) translateX(0);
-          transform: translateY(-20px) translateX(0);
+.cover .cover-text img {
   position: absolute;
-  text-align: left;
-  margin: 10px;
-  margin-top: 0;
+  left: 0;
+  top: 180px;
+  max-width: 350px;
 }
 
 .cover .cover-text h1 {
   width: 100%;
-  font-size: 24px;
+  font-size: 22px;
   color: #fafafa;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -50,7 +50,7 @@
   -webkit-transition: ease-in 1s;
   transition: ease-in 1s;
   color: #fafafa;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .cover .cover-buttons {
