--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -13,14 +13,14 @@
        <p id="coverText2">Fyll ut skjemaet under, også kommer vi tilbake til deg innen 4 timer</p>
     </div>
  </div>
-<!-- 
+
  <div class="load-wrapp">
     <div class="load-2">
       <div class="line"></div>
       <div class="line"></div>
       <div class="line"></div>
     </div>
-  </div> -->
+  </div>
 
 <div class="make-order">
     <form method='post' enctype="multipart/form-data">
