--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -6,10 +6,19 @@
 
 
 <div class="cover">
-    <div class="cover-text">
-       <img src="{% static '/images/covers/cover-4.png' %}" alt="cover-img">
-       <h1>Her kan du finne ut hvem vi er</h1>
-       <p id="coverText2">Les om designere og utviklerne våres, og hvordan Webiser fungerer</p>
-    </div>
+   <div class="cover-mobile">
+      <div class="cover-text">
+         <img src="{% static '/images/covers/cover-4.png' %}" alt="cover-img">
+         <h1>Her kan du finne ut hvem vi er</h1>
+         <p id="coverText2">Les om designere og utviklerne våres, og hvordan Webiser fungerer</p>
+      </div>
+   </div>
+   <div class="cover-desktop">
+      <div class="cover-text">
+         <img src="{% static '/images/covers/cover-4.png' %}" alt="cover-img">
+         <h1>Her kan du finne ut hvem vi er</h1>
+         <p id="coverText2">Les om designere og utviklerne våres, og hvordan Webiser fungerer</p>
+      </div>
+   </div>
  </div>
 {% endblock %}
