--- a/static/scss/store/about.css
+++ b/static/scss/store/about.css
@@ -1,14 +1,1 @@
-.cover {
-  height: 40vh;
-}
-
-.cover .cover-text {
-  -webkit-transform: translateY(-70px) translateX(0);
-          transform: translateY(-70px) translateX(0);
-}
-
-.cover .cover-text img {
-  top: 50px;
-  left: -35px;
-}
-/*# sourceMappingURL=about.css.map */
+/* No CSS *//*# sourceMappingURL=about.css.map */
