--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -103,15 +103,15 @@
         </form>
     </div>
     <a href="/bestill" class="order" id="makeOrder">Bestill</a>
-    <!-- <i class="fab fa-opencart"></i> -->
     <!-- DESKTOP -->
     <div class="desktop-menu">
         <ul class="desktop-ul">
             <li class="desktop-li" id="desktopLi">
-                <a href="#">Hjelp</a>
-                <a href="">Om oss</a>
-                <a href="">Priser</a>
-                <a href="">Kontakt oss</a>
+                <a onclick="prices()">Priser</a>
+                <a href="/om-webiser">Om oss</a>
+                <a onclick="info()">Prosess</a>
+                <a href="/hosting-informasjon">Hosting</a>
+                <a onclick="contact()">Kontakt oss</a>
             </li>   
         </ul>
     </div>
