--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -7,11 +7,20 @@
 <script rel="stylesheet" src="{% static '/js/order.js' %}" type="text/javascript"></script>
 
 <div class="cover">
+  <div class="cover-mobile">
     <div class="cover-text">
        <img src="{% static '/images/covers/cover-2.png' %}" alt="cover-img">
        <h1>Kom i gang med bestillingen</h1>
        <p id="coverText2">Fyll ut skjemaet under, også kommer vi tilbake til deg innen 4 timer</p>
     </div>
+  </div>
+  <div class="cover-desktop">
+    <div class="cover-text">
+       <img src="{% static '/images/covers/cover-2.png' %}" alt="cover-img">
+       <h1>Kom i gang med bestillingen</h1>
+       <p id="coverText2">Fyll ut skjemaet under, også kommer vi tilbake til deg innen 4 timer</p>
+    </div>
+  </div>
  </div>
 
  <div class="load-wrapp">
