--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -368,72 +368,6 @@ html, body {
   font-size: 15px;
 }
 
-.about-us {
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background: white;
-  text-align: center;
-}
-
-.about-us .border {
-  background: #646464;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
-  height: 2px;
-  width: 65%;
-  margin: 20px auto;
-}
-
-.about-us h1 {
-  font-size: 26px;
-  color: #0f0f0f;
-  margin-top: 32px;
-  margin-bottom: 45px;
-}
-
-.about-us .text {
-  width: 100%;
-}
-
-.about-us .text p {
-  margin: 0 auto;
-  width: 90%;
-  font-size: 15px;
-  letter-spacing: 1px;
-}
-
-.about-us .text #secondText {
-  display: none;
-}
-
-.about-us .text #secondText a {
-  text-decoration: underline;
-  color: #1212cc;
-}
-
-.about-us .text button {
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
-  border-radius: 30px;
-  border: 2px solid transparent;
-  color: #1e1e1e;
-  width: 150px;
-  font-size: 16px;
-  padding: 5px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  background: #485ab9;
-  color: white;
-  outline: none;
-}
-
-.about-us .text button:hover {
-  background: white;
-  color: black;
-}
-
 .contact-us {
   background: white;
   width: 100%;
@@ -509,5 +443,104 @@ html, body {
 .contact-us form .form-actions button:hover {
   background: white;
   color: black;
+}
+
+@media only screen and (min-device-width: 1024px) {
+  .product-section .product-card {
+    width: 100%;
+  }
+  .contact-us form {
+    margin: 15px 85px;
+  }
+  .proccess {
+    background: white;
+    width: 100%;
+    height: auto;
+    padding: 30px;
+    text-align: center;
+    position: relative;
+  }
+  .proccess.active .content .class-1 {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transition: all ease-in .2s;
+    transition: all ease-in .2s;
+  }
+  .proccess.active .content .class-2 {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transition: all ease-in .6s;
+    transition: all ease-in .6s;
+  }
+  .proccess.active .content .class-3 {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transition: all ease-in .8s;
+    transition: all ease-in .8s;
+  }
+  .proccess.active .content .class-4 {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transition: all ease-in 1s;
+    transition: all ease-in 1s;
+  }
+  .proccess.active .content .class-5 {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transition: all ease-in 1.2s;
+    transition: all ease-in 1.2s;
+  }
+  .proccess .border {
+    background: #646464;
+    height: 2px;
+    width: 65%;
+    margin: 20px auto;
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+  }
+  .proccess h1 {
+    font-size: 26px;
+    color: #0f0f0f;
+    margin-bottom: 55px;
+    margin-top: 10px;
+  }
+  .proccess h1.heading {
+    font-family: 'Arima Madurai', cursive;
+  }
+  .proccess .content {
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
+  .proccess .content .class-1 p {
+    margin: 5px auto;
+    width: 55%;
+    font-size: 15px;
+  }
+  .proccess .content .class-2 p {
+    margin: 5px auto;
+    width: 55%;
+    font-size: 15px;
+  }
+  .proccess .content .class-3 p {
+    margin: 5px auto;
+    width: 55%;
+    font-size: 15px;
+  }
+  .proccess .content .class-4 p {
+    margin: 5px auto;
+    width: 55%;
+    font-size: 15px;
+  }
+  .proccess .content .class-5 p {
+    margin: 5px auto;
+    width: 55%;
+    font-size: 15px;
+  }
 }
 /*# sourceMappingURL=base.css.map */
