--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -5,8 +5,21 @@
     box-sizing: border-box;
   }
 
+// GLOBAL
+@media only screen and (min-device-width:1024px) { 
+  .flex{
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+}
+
 // STANDARD PHONE
-.cover{ 
+.cover-desktop{
+  display: none;
+}
+
+.cover-mobile{ 
   position: relative;
   width: 100%;
   height: 65vh;
@@ -71,4 +84,77 @@
       }
     }
   }
+}
+
+// NORMAL DESKTOP
+@media only screen and (min-device-width:1024px) { 
+.cover-mobile{
+  display: none;
+}
+.cover-desktop{
+  position: relative;
+  width: 100%;
+  height: 65vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(120, 144, 220);
+  .cover-text{
+    width: 100%;
+    transform: translateY(0) translateX(10px);
+    position: relative;
+    text-align: left;
+    margin: 5px;
+    margin-top: 0;
+    img{
+      position: absolute;
+      left: 0;
+      top: 180px;
+      max-width: 350px;
+    }
+    h1{
+      width: 100%;
+      font-size: 22px;
+      color: rgb(250, 250, 250);
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+    p{
+      transition: ease-in 1s;
+      color: rgb(250, 250, 250);
+      font-size: 14px;
+    }
+  }
+  .cover-buttons{
+    text-align: left;
+    transform: translateY(30px);
+    width: 100%;
+    display: flex;
+    a{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      text-align: center;
+      margin-top: 10px;
+      margin-right: 15px;
+      border-radius: 30px;
+      width: max-content;
+      font-size: 14px;
+      padding: 10px;
+      transition: all .2s ease-in-out;
+      outline: none;
+      text-transform: uppercase;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      background: transparent;
+      box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+      border: 2px solid white;
+      backdrop-filter: blur(20px);
+      &:nth-child(1){
+        background: rgb(60, 84, 160);
+      }
+    }
+  }
+ }
 }
