--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -11,6 +11,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
 
+<div class="load-wrapp" id="homeLoader">
+   <div class="load-2">
+     <div class="line"></div>
+     <div class="line"></div>
+     <div class="line"></div>
+   </div>
+ </div>
 
 <div class="cover">
    <div class="cover-desktop">
