--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -339,6 +339,7 @@ $primaryColor: #2d9cb3;
                 .desktop-li{
                     list-style: none;
                     a{
+                        cursor: pointer;
                         position: relative;
                         color: white;
                         text-decoration: none;
