--- a/apps/core/templates/pages/about.html
+++ b/apps/core/templates/pages/about.html
@@ -5,20 +5,23 @@
 <link rel="stylesheet" href="{% static '/scss/store/about.css' %}" type="text/css">
 
 
+
 <div class="cover">
+   <div class="cover-desktop">
+      <div class="cover-text">
+         <h1>Les om Webiser</h1>
+         <p id="coverText2">Få mer informasjon om teamet våres, og hvordan Webiser fungerer</p>
+      </div>
+      <div class="img">
+         <img src="{% static '/images/covers/cover-4.png' %}" alt="cover-img">
+      </div>
+   </div>
    <div class="cover-mobile">
       <div class="cover-text">
          <img src="{% static '/images/covers/cover-4.png' %}" alt="cover-img">
-         <h1>Her kan du finne ut hvem vi er</h1>
-         <p id="coverText2">Les om designere og utviklerne våres, og hvordan Webiser fungerer</p>
+         <h1>Les om Webiser</h1>
+         <p id="coverText2">Få mer informasjon om teamet våres, og hvordan Webiser fungerer</p>
       </div>
    </div>
-   <div class="cover-desktop">
-      <div class="cover-text">
-         <img src="{% static '/images/covers/cover-4.png' %}" alt="cover-img">
-         <h1>Her kan du finne ut hvem vi er</h1>
-         <p id="coverText2">Les om designere og utviklerne våres, og hvordan Webiser fungerer</p>
-      </div>
-   </div>
- </div>
+</div>
 {% endblock %}
