--- a/apps/core/templates/pages/hosting.html
+++ b/apps/core/templates/pages/hosting.html
@@ -4,12 +4,24 @@
 {% block content %}
 <link rel="stylesheet" href="{% static '/scss/store/hosting.css' %}" type="text/css">
 
-
 <div class="cover">
-    <div class="cover-text">
-       <img src="{% static '/images/covers/cover-5.png' %}" alt="cover-img">
-       <h1>100% sikerhet med vår hosting tjeneste</h1>
-       <p id="coverText2">Bli synlig på nett i dag, med vår hosting tjeneste</p>
-    </div>
- </div>
+   <div class="cover-desktop">
+      <div class="cover-text">
+         <img src="{% static '/images/covers/cover-5.png' %}" alt="cover-img">
+         <h1>100% sikerhet med vår hosting tjeneste</h1>
+         <p id="coverText2">Bli synlig på nett i dag, med vår hosting tjeneste</p>
+      </div>
+      <div class="img">
+         <img src="{% static '/images/covers/cover-4.png' %}" alt="cover-img">
+      </div>
+   </div>
+   <div class="cover-mobile">
+      <div class="cover-text">
+         <img src="{% static '/images/covers/cover-5.png' %}" alt="cover-img">
+         <h1>100% sikerhet med vår hosting tjeneste</h1>
+         <p id="coverText2">Bli synlig på nett i dag, med vår hosting tjeneste</p>
+      </div>
+   </div>
+</div>
+
  {% endblock %}
