--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -38,9 +38,14 @@
       position: absolute;
       left: 0;
       top: 180px;
-      max-width: 350px;
+      max-width: 320px;
+      background: linear-gradient(to right, rgb(80, 104, 180), transparent);
+      border-radius: 45px;
+      border-bottom-right-radius: 125px;
+      border-top-right-radius: 125px;
     }
     h1{
+      transform: translateY(-10);
       width: 100%;
       font-size: 22px;
       color: rgb(250, 250, 250);
@@ -54,7 +59,6 @@
   }
   .cover-buttons{
     text-align: left;
-    transform: translateY(30px);
     width: 100%;
     display: flex;
     a{
@@ -103,7 +107,7 @@
     width: 100%;
     transform: translateY(0) translateX(10px);
     position: relative;
-    text-align: left;
+    text-align: center;
     margin: 5px;
     margin-top: 0;
     img{
@@ -125,10 +129,12 @@
     }
   }
   .cover-buttons{
-    text-align: left;
+    text-align: center;
     transform: translateY(30px);
     width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     a{
       display: flex;
       justify-content: center;
