--- a/static/scss/store/hosting.scss
+++ b/static/scss/store/hosting.scss
@@ -1,12 +1,9 @@
 // STANDARD PHONE
-.cover{
-  height: 40vh;
+.cover-mobile{ 
+  height: 55vh;
   .cover-text{
-    transform: translateY(-70px) translateX(0);
-    img{
-      top: 70px;
-      left: -35px;
-      max-width: 320px;
-    }
+      img{
+          top: 120px;
+      }
   }
 }
