--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -1,17 +1,15 @@
 $loader: rgb(80, 104, 180);
 
 // STANDARD PHONE
-.cover{
-  height: 40vh;
+.cover-mobile{ 
+  height: 55vh;
   .cover-text{
-    transform: translateY(-70px) translateX(0);
-    img{
-      top: 70px;
-      left: -35px;
-      max-width: 300px;
-    }
+      img{
+          top: 90px;
+      }
   }
 }
+
 .make-order{
     width: 100%;
     height: auto;
@@ -77,17 +75,24 @@ $loader: rgb(80, 104, 180);
 .load-wrapp {
   float: left;
   width: 100%;
-  height: 100px;
+  height: 100vh;
   padding: 20px ;
   border-radius: 5px;
   text-align: center;
   background-color: white;
   position: fixed;
   left: 0;
-  top: 400px;
+  top: 0;
+  z-index: 100000;
+  opacity: 1;
+  pointer-events: none;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all .5s ease-in;
+  &.hidden{
+    opacity: 0;
+  }
 }
 
 .load-wrapp p {
